<resources>
    <string name="app_name">revision_from_codelabs</string>
    <string name="Wow">wow</string>
    <string name="Make_a_toast">make a toast!</string>
    <string name="Make_it_count">make it count!</string>
    <string name="zero">0</string>
    <string name="toast_message">This is the toast message !</string>
    <string name="Count_up">Click to count up!</string>
    <string name="Username">username</string>
    <string name="enter_a_username">enter a username</string>
    <string name="image_prevue">image_prevue</string>
</resources>